--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/Cadastro.css">
+  <link rel="stylesheet" href="../css/Cadastro.css">
   <title>Cadastro - Elegance</title>
 </head>
 
@@ -34,7 +34,7 @@
       }
 
       try {
-        const response = await fetch('http://localhost:3000/register', {
+        const response = await fetch('http://localhost:3001/register', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
