--- a/frontend/carrinho.html
+++ b/frontend/carrinho.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/Index.css">
   <title>Carrinho - Elegance</title>
+  <link rel="stylesheet" href="../css/carrinho.css">
 </head>
 
 <body>
-  <header class="hero">
-    <div class="hero-text">
-      <h1>Carrinho de Compras</h1>
-      <p>Confira os produtos que você adicionou ao carrinho.</p>
+
+  <header>
+    <div class="header-top">
+      <div class="logo">
+        <h1>Elegance</h1>
+      </div>
+      <a href="./index.html"><button>Voltar</button></a>
     </div>
-    <button id="logout-button" onclick="logout()">Logout</button>
   </header>
+  <div class="hero">
+    <div class="hero-text">
+      <h1>Look Elegance</h1>
+    </div>
+  </div>
 
   <section id="carrinho" class="produtos">
     <h2>Produtos no Carrinho</h2>
@@ -29,7 +35,7 @@
     <p>Contato: <a href="mailto:contato@elegance.com">contato@elegance.com</a></p>
   </footer>
 
-  <script src="js/carrinho.js"></script>
+  <script src="../js/carrinho.js"></script>
 </body>
 
 </html>
