--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/Cadastro.css" />
+    <title>Cadastro - Elegance</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/Cadastro.css">
-  <title>Cadastro - Elegance</title>
-</head>
+  <body>
+    <div class="form-container">
+      <h1>Cadastro</h1>
+      <form id="register-form">
+        <input type="text" id="name" placeholder="Nome" required />
+        <input type="email" id="email" placeholder="E-mail" required />
+        <input type="password" id="password" placeholder="Senha" required />
+        <button type="submit">Cadastrar</button>
+      </form>
+      <p>Já possui conta? <a href="login.html">Login</a></p>
+    </div>
 
-<body>
-  <div class="form-container">
-    <h1>Cadastro</h1>
-    <form id="register-form">
-      <input type="text" id="name" placeholder="Nome" required />
-      <input type="email" id="email" placeholder="E-mail" required />
-      <input type="password" id="password" placeholder="Senha" required />
-      <button type="submit">Cadastrar</button>
-    </form>
-    <p>Já possui conta? <a href="login.html">Login</a></p>
-  </div>
+    <script>
+      document
+        .getElementById("register-form")
+        .addEventListener("submit", async (e) => {
+          e.preventDefault();
 
-  <script>
-    document.getElementById('register-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
+          const name = document.getElementById("name").value;
+          const email = document.getElementById("email").value;
+          const password = document.getElementById("password").value;
 
-      const name = document.getElementById('name').value;
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
+          if (!name || !email || !password) {
+            alert("Preencha todos os campos!");
+            return;
+          }
 
-      if (!name || !email || !password) {
-        alert('Preencha todos os campos!');
-        return;
-      }
+          try {
+            const response = await fetch("http://localhost:3001/register", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({ name, email, password }),
+            });
 
-      try {
-        const response = await fetch('http://localhost:3001/register', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify({ name, email, password }),
+            if (response.ok) {
+              const data = await response.json();
+              alert(data.message);
+            } else {
+              const error = await response.json();
+              alert("Erro no cadastro: " + error.error);
+            }
+          } catch (error) {
+            alert("Erro ao enviar o formulário. Tente novamente mais tarde.");
+            console.error("Erro:", error);
+          }
         });
-
-        if (response.ok) {
-          const data = await response.json();
-          alert(data.message);
-        } else {
-          const error = await response.json();
-          alert('Erro no cadastro: ' + error.error);
-        }
-      } catch (error) {
-        alert('Erro ao enviar o formulário. Tente novamente mais tarde.');
-        console.error('Erro:', error);
-      }
-    });
-  </script>
-</body>
-
+    </script>
+  </body>
 </html>
