--- a/frontend/ofertas.html
+++ b/frontend/ofertas.html
@@ -1,68 +1,117 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ofertas - Elegance</title>
+    <link rel="stylesheet" href="../css/ofertas.css" />
+    <script src="../js/ofertas.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ofertas - Elegance</title>
-  <link rel="stylesheet" href="../css/ofertas.css">
-  <script src="../js/ofertas.js"></script>
-</head>
-
-<body>
-  <header>
-    <div class="header-top">
-      <div class="logo">
-        <h1>Elegance</h1>
+  <body>
+    <header>
+      <div class="header-top">
+        <div class="logo">
+          <h1>Elegance</h1>
+        </div>
+        <a href="./index.html"><button>Voltar</button></a>
       </div>
-      <a href="./index.html"><button>Voltar</button></a>
+    </header>
+    <div class="hero">
+      <div class="hero-text">
+        <h1>Ofertas Elegance</h1>
+      </div>
     </div>
-  </header>
-  <div class="hero">
-    <div class="hero-text">
-      <h1>Ofertas Elegance</h1>
-    </div>
-  </div>
 
-<section class="ofertas">
-  <h2>Confira as nossas ofertas exclusivas!</h2>
-  <div class="oferta-item">
-    <img src="https://i.pinimg.com/474x/4d/1f/38/4d1f3887c8a5f74744a38dcfd12177af.jpg" alt="Oferta Especial 1">
-    <h3>Oferta Especial 1</h3>
-    <p>Desconto de 50% em toda a coleção!</p>
-    <p class="price">R$ 99,99</p>
-    <p class="availability">Em estoque</p>
-    <div class="rating">
-      <span>★★★★☆</span>
-      <p>25 avaliações</p>
-    </div>
-    <button class="open-modal" data-name="Oferta Especial 1" data-img="https://i.pinimg.com/474x/4d/1f/38/4d1f3887c8a5f74744a38dcfd12177af.jpg"
-      data-description="Desconto de 50% em toda a coleção!" data-price="R$ 99,99" data-availability="Disponível"
-      data-rating="★★★★☆">
-      Ver Mais
-    </button>
-  </div>
-  <div class="oferta-item">
-    <img src="https://i.pinimg.com/474x/4d/1f/38/4d1f3887c8a5f74744a38dcfd12177af.jpg" alt="Oferta Especial 2">
-    <h3>Oferta Especial 2</h3>
-    <p>Compre 2 e leve 3!</p>
-    <p class="price">R$ 149,90</p>
-    <p class="availability">Em estoque</p>
-    <div class="rating">
-      <span>★★★★☆</span>
-      <p>15 avaliações</p>
-    </div>
-    <button class="open-modal" data-name="Oferta Especial 2" data-img="https://i.pinimg.com/474x/4d/1f/38/4d1f3887c8a5f74744a38dcfd12177af.jpg"
-      data-description="Compre 2 e leve 3!" data-price="R$ 149,90" data-availability="Disponível" data-rating="★★★★☆">
-      Ver Mais
-    </button>
-  </div>
-</section>
+    <h2>Confira as nossas ofertas exclusivas!</h2>
+    <section class="ofertas">
+      <div class="oferta-item">
+        <img
+          src="https://i.pinimg.com/474x/4d/1f/38/4d1f3887c8a5f74744a38dcfd12177af.jpg"
+          alt="Oferta Especial 1"
+        />
+        <h3>Oferta Especial 1</h3>
+        <p style="color: #ff4d00">Desconto de 20%!</p>
+        <p style="color: #000000" class="price">R$ 99,99</p>
+        <p style="color: #28a745" class="availability">Em estoque</p>
+        <div class="rating">
+          <span style="color: #ffee00">★★★★☆</span>
+          <p>25 avaliações</p>
+        </div>
+        <button
+          class="open-modal"
+          data-name="Oferta Especial 1"
+          data-img="https://i.pinimg.com/474x/4d/1f/38/4d1f3887c8a5f74744a38dcfd12177af.jpg"
+          data-description="Desconto de 20% em toda a coleção!"
+          data-price="R$ 99,99"
+          data-availability="Disponível"
+          data-rating="★★★★☆"
+        >
+          Ver Mais
+        </button>
+      </div>
+      <div class="oferta-item">
+        <img
+          src="https://i.pinimg.com/474x/9d/ae/c7/9daec7b58c5af580fafa0951afccb1ae.jpg"
+          alt="Oferta Especial 2"
+        />
+        <h3>Oferta Especial 2</h3>
+        <p style="color: #ff4d00">Compre 2 e leve 3!</p>
+        <p style="color: #000000" class="price">R$ 149,90</p>
+        <p style="color: #28a745" class="availability">Em estoque</p>
+        <div class="rating">
+          <span style="color: #ffee00">★★★★☆</span>
+          <p>15 avaliações</p>
+        </div>
+        <button
+          class="open-modal"
+          data-name="Oferta Especial 2"
+          data-img="https://i.pinimg.com/474x/9d/ae/c7/9daec7b58c5af580fafa0951afccb1ae.jpg"
+          data-description="Compre 2 e leve 3!"
+          data-price="R$ 149,90"
+          data-availability="Disponível"
+          data-rating="★★★★☆"
+        >
+          Ver Mais
+        </button>
+      </div>
+      <div class="oferta-item">
+        <img
+          src="https://i.pinimg.com/474x/62/ec/09/62ec096513e0a4fc9b7522c1f2e56bba.jpg"
+          alt="Oferta Especial 1"
+        />
+        <h3>Oferta Especial 3</h3>
+        <p style="color: #ff4d00">Desconto de natal 50% em toda a coleção!</p>
+        <p style="color: #000000" class="price">R$ 69,99</p>
+        <p style="color: #28a745" class="availability">Em estoque</p>
+        <div class="rating">
+          <span style="color: #ffee00">★★★★☆</span>
+          <p>25 avaliações</p>
+        </div>
+        <button
+          class="open-modal"
+          data-name="Oferta Especial 3"
+          data-img="https://i.pinimg.com/474x/62/ec/09/62ec096513e0a4fc9b7522c1f2e56bba.jpg"
+          data-description="Desconto de natal 50% em toda a coleção!"
+          data-price="R$ 99,99"
+          data-availability="Disponível"
+          data-rating="★★★★☆"
+        >
+          Ver Mais
+        </button>
+      </div>
+    </section>
 
-
-  <footer>
-    <p>&copy; 2024 Elegance. Todos os direitos reservados.</p>
-  </footer>
-</body>
-
+    <footer class="footer">
+      <p>&copy; 2024 Elegance. Todos os direitos reservados.</p>
+      <p>
+        Contato: <a href="mailto:contato@elegance.com">contato@elegance.com</a>
+      </p>
+      <div class="social-media">
+        <a href="https://facebook.com" target="_blank">Facebook</a>
+        <a href="https://instagram.com" target="_blank">Instagram</a>
+        <a href="https://twitter.com" target="_blank">Twitter</a>
+      </div>
+    </footer>
+  </body>
 </html>
